fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
 
   width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .header-div {
